Fix for Bug 39521 - [modeler] Registry insufficiently synchronized
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/modeler/trunk@409181 13f79535-47bb-0310-9956-ffa450edef68